# sillyfilebrowser

./: .gitignore  =1.1.0  Dockerfile  README.md  aa.rs  alo.ipynb  alo2.py  alp.py  app.py  info.txt  interface.py  interface_new.py  main.py  openai_key  pyproject.toml  requirements-important.txt  requirements.txt
ml/: 2ndphase.py
models/: model.pt
src/: alo.py  alo2.py  captioning.py  cli.py  indexdb.py  indexing.py  main.py
templates/: achha.html  aispace.html  index.html  index1.html  index2.html  jewgle.html  result.html  script.js  spotify.html
